--- a/tasks/install_ldap.yml
+++ b/tasks/install_ldap.yml
@@ -12,7 +12,7 @@
 - name: Install the openldap and required Packages for Ubuntu
   apt: name={{ item }} state=installed update_cache=yes
   with_items: openldap_server_pkgs
-  environment: env
+  environment: '{{ env }}'
   when: ansible_os_family == 'Debian'
 
 - name: Delete the configuration directory
